v2.0.0.39
Hook added to validate frontend add listing - ADDED
Link posts data not converted during v1 to v2 conversion - FIXED
Map pinpoint not working - FIXED

v2.0.0.38
File upload limit issue - FIXED
PHP allow_url_fopen = off may break import csv - FIXED
Error checking if wp_insert_term fails during dummy data insertion - ADDED
Unable to add duplicate sort items for asc/desc - FIXED
gd_post_images widget now has option to set the specific image size - ADDED
Option added to add `noindex` tags to empty GD archive pages - ADDED
Post badge widget text can now accept HTML so for example font awesome icons can be used - ADDED
CPT slug not allowing - dash - FIXED
WP Super Duper lib updated to work with latest Gutenberg JS - FIXED
Textarea custom field html editor setting not working - FIXED
Map loads markers from non-requested CPT on multilingual site - FIXED
Conflict with select2 basic version loaded via 3rd party plugins - FIXED
First image of slider not loading srcset which can make it load the wrong size image - FIXED
WP5.0 changed hook name which made GD post types not editable from backend - FIXED
Shortcode [gd_single_closed_text] depreciated, use [gd_notifications] instead - CHANGED

v2.0.0.37
If reviews not used in tabs then the #reviews anchor links no longer work - FIXED
gd_listings related_to can still show the current listing  - FIXED
Import csv shows invalid csv file error - FIXED

v2.0.0.36
v1 to v2 conversion instructions improved - UPDATED
Edit add listing page not loading with Beaver Builder - FIXED
Countries table lib checking empty on non variable - FIXED
Changes to loop widget for Beaver Builder themer layouts - CHANGED
Themes calling the_content or the_excerpt outside the loop can cause no posts to show - FIXED
Post Badge widget can now use %%input%% text and also has option to add link - ADDED
Recent reviews widget now has option to set the minimum rating of reviews to show - ADDED